# DataServerInhouse

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: daily-update.yml
Data/: rb20260310.csv  rb20260311.csv  rb20260312.csv  rb20260313.csv  rb20260316.csv  rb20260317.csv  rb20260318.csv  rb20260319.csv  rb20260323.csv  rb20260324.csv  rb20260325.csv  rb20260326.csv  rb20260327.csv  rb20260403.csv  rb20260406.csv  rb20260407.csv  rb20260408.csv  rb20260409.csv  rb20260410.csv  rb20260413.csv  rb20260414.csv  rb20260415.csv  rb20260416.csv  rb20260417.csv  rb20260420.csv  rb20260421.csv  rb20260422.csv  rb20260423.csv  rb20260424.csv  rb20260427.csv  rb20260428.csv  rb20260430.csv  rb20260501.csv  rb20260507.csv  rb20260508.csv  rb20260511.csv  rb20260512.csv  rb20260513.csv  rb20260514.csv  rb20260515.csv  (+35 more)
docs/: DataServer_InHouse_Proposal.pptx  data.json  index.html  news_events.yaml  spread_analysis.html  style.css  weekly_compare.html
docs/chartpack/: daily_chartpack_20260327.pptx  daily_chartpack_20260403.pptx  daily_chartpack_20260406.pptx  daily_chartpack_20260407.pptx  daily_chartpack_20260408.pptx  daily_chartpack_20260409.pptx  daily_chartpack_20260410.pptx  daily_chartpack_20260413.pptx  daily_chartpack_20260414.pptx  daily_chartpack_20260415.pptx  (+53 more)
scripts/: check_data.py  fetch_jpx.py  generate_chartpack.py  generate_presentation.py  generate_site.py  import_csv.py
src/: asset_taxonomy.py  commodity_query.py  config.py  csv_parser.py  data_loader.py  db_schema.py  query.py  repository.py  spread_analysis.py  storage.py
(+2 files in other folders)
