[project]
name = "dataserver-inhouse"
version = "0.1.0"
description = "In-house data server for JPX derivative market data collection and analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "python-pptx>=1.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]
